fix: uneven margins

--- a/packages/core/src/components/expansion/expansion.scss
+++ b/packages/core/src/components/expansion/expansion.scss
@@ -15,7 +15,7 @@ section.expansion {
   &.expanded .expansion-content {
     display: block;
     max-height: initial;
-    padding-bottom: 12px;
+    padding: 12px 0;
   }
 
   button {
@@ -26,7 +26,7 @@ section.expansion {
     max-width: unset;
     white-space: unset;
     cursor: pointer;
-    margin: 10px 0 22px;
+    margin: 12px 0;
     padding: 0;
     display: flex;
     align-items: center;
